--- a/apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorGuidance/read/KnowledgeEditorGuidanceReadView.less
+++ b/apps/helpdesk/src/pages/aiAgent/components/KnowledgeEditor/KnowledgeEditorGuidance/read/KnowledgeEditorGuidanceReadView.less
@@ -2,12 +2,9 @@
     .container {
         width: 100%;
         flex: 1;
-        overflow-y: scroll;
-        overflow-x: hidden;
         display: flex;
         padding: var(--spacing-xxl) var(--spacing-xxl) var(--spacing-md)
             var(--spacing-xxl);
-
         flex-direction: column;
         gap: var(--layout-spacing-m);
     }
